--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "https://nahblue.github.io/angular-quizz-buzzfeed/"
+      "url": "http://localhost:4200/"
     },
     {
       "name": "ng test",
